添加了注册页面

--- a/products/templates/product_list.html
+++ b/products/templates/product_list.html
@@ -3,11 +3,18 @@
 <head>
     <meta charset="UTF-8">
     <title>欢迎来到cHub</title>
+    <style>
+        form{
+        text-align:center;
+        padding:10px;
+
+        }
+    </style>
 </head>
 <body>
 {% extends 'themes.html'%}
 {% block content %}
-<h1>这是产品页面</h1>
+
 {% endblock content %}
 </body>
 </html>
