--- a/templates/themes.html
+++ b/templates/themes.html
@@ -42,6 +42,7 @@
     <ul>
         <li style="float:left;"><a href="{% url 'home' %}">Productions</a></li>
         {% if user.is_authenticated %}
+        <li style="float:right"><a href="{% url 'Publish' %}">发布</a></li>
         <li style="float:right">
             <a href="Javascript:{ document.getElementById('logout').submit()}">Logout</a>
             <form id="logout" method="POST" action="{% url 'Logout' %}">
@@ -58,9 +59,6 @@
 {% block content %}
 {% endblock content %}
 
-<script>
-    x=document.getElementById('logout')
-    x.addEventListener('click',sumbit)
-</script>
+
 </body>
 </html>
